# ModelForge

./: .gitignore  ANALYSIS_SUMMARY.md  BUGFIX_SUMMARY.md  BUG_FIX_PLAN.md  CREATE_GITHUB_ISSUE.md  CREATE_ISSUE_INSTRUCTIONS.md  ISSUE_DATABASE_SCHEMA_MISMATCH.md  NEXT_STEPS.md  PR_SUMMARY.md  README.md  README_BUG_FIX_ISSUE.md  TASK_COMPLETION_SUMMARY.md  create_bug_fix_issue.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow.yaml
Frontend/: package-lock.json
Frontend/src/: App.js
Frontend/src/components/: Navbar.jsx  PushToHubForm.jsx
Frontend/src/pages/: AppLanding.jsx  DetectHardwarePage.jsx  FinetuningSettingsPage.jsx  ListAllModels.jsx  ListModels.jsx  Loading.jsx  ProviderSelectionPage.jsx  TechnicalDetailsPage.jsx
Frontend/src/services/: api.js
ModelForge/: app.py  cli.py  dependencies.py
ModelForge/database/: database_manager.py
ModelForge/evaluation/: dataset_validator.py  metrics.py
ModelForge/formatters/: formatting_functions.py
ModelForge/globals/: globals.py
ModelForge/notebook_cli/: __init__.py  progress.py  prompts.py  wizard.py
ModelForge/providers/: huggingface_provider.py  unsloth_provider.py
ModelForge/routers/: finetuning_router.py  hub_management_router.py  playground_router.py
ModelForge/schemas/: training_schemas.py
ModelForge/services/: hardware_service.py  training_service.py
ModelForge/strategies/: dpo_strategy.py  qlora_strategy.py  rlhf_strategy.py  sft_strategy.py  strategy_factory.py
ModelForge/test_datasets/: dpo_qa_test.jsonl  dpo_summarization_test.jsonl  dpo_text_generation_test.jsonl  low_summarization_train_set.jsonl
ModelForge/utilities/: chat_playground.py  device_utils.py
ModelForge/utilities/finetuning/: CausalLLMTuner.py  Finetuner.py  QuestionAnsweringTuner.py  Seq2SeqLMTuner.py  provider_adapter.py  quantization.py  settings_builder.py
ModelForge/utilities/finetuning/providers/: __init__.py  base_provider.py  huggingface_provider.py  provider_adapter.py  provider_registry.py  unsloth_provider.py
ModelForge/utilities/hardware_detection/: hardware_detector.py  hardware_detector_factory.py  model_recommendation.py
ModelForge/utilities/settings_managers/: CausalLLMTuner.py  DBManager.py
docs/: PROVIDERS.md  README.md
docs/configuration/: configuration-guide.md  dataset-formats.md
docs/contributing/: architecture.md  contributing.md  development.md  model-configs.md
docs/getting-started/: quickstart.md  whats-new.md
docs/installation/: linux.md  macos-mps.md  post-installation.md  windows.md
docs/providers/: huggingface.md  overview.md  unsloth.md
docs/strategies/: dpo.md  overview.md  rlhf.md
docs/troubleshooting/: common-issues.md  faq.md  performance.md  windows-issues.md
tests/: test_device_utils.py  test_provider.py
