[project]
name = "modelforge-finetuning"
version = "3.0.4"
description = "ModelForge: A no-code toolkit for fine-tuning HuggingFace models"
authors = [
    {name = "R3tr0 M1ll3r", email = "r3tr0.m1ll3r@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.5.2",
    "datasets==3.5.0",
    "dotenv>=0.9.9",
    "fastapi==0.115.12",
    "huggingface-hub==0.30.2",
    "safetensors==0.5.3",
    "setuptools==78.1.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tokenizers==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.48.3",
    "trl==0.16.0",
    "uvicorn",
    "platformdirs",
    "psutil",
    "pynvml",
    "peft",
    "python-multipart",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes==0.45.3",
]
cli = [
    "questionary>=2.0.1",
    "rich>=13.0.0",
    "ipywidgets>=8.0.0",
    "ipython>=8.0.0",
]
unsloth = [
    "unsloth",
    "bitsandbytes==0.45.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ModelForge*"]

[project.scripts]
modelforge = "ModelForge.cli:main"
modelforge-nb = "ModelForge.notebook_cli.wizard:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ModelForge" = [
    "**/*.jsonl",
    "**/*.yaml",
    "**/*.yml",
    "**/*.json",
    # Include the entire Frontend/build directory and all its contents
    "Frontend/build/**",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "database/*",
    "datasets/*",
    "model_checkpoints/*",
    "training_logs/*",
    "*__pycache__*",
    "*.pyc"
]

[project.urls]
Documentation = "https://modelforge-finetuning.readthedocs.io"
Repository = "https://github.com/forgeopus/modelforge"
Organization = "https://github.com/forgeopus"
