[project]
name = "modelforge-finetuning"
version = "3.0.5"
description = "ModelForge: A no-code toolkit for fine-tuning HuggingFace models"
authors = [
    {name = "R3tr0 M1ll3r", email = "r3tr0.m1ll3r@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.13.0",
    "datasets==4.3.0",
    "dotenv>=0.9.9",
    "fastapi==0.135.1",
    "huggingface-hub==1.7.1",
    "safetensors==0.7.0",
    "setuptools==78.1.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "transformers==5.2.0",
    "trl==0.24.0",
    "uvicorn",
    "platformdirs",
    "psutil",
    "pynvml",
    "peft==0.18.1",
    "python-multipart",
    "sqlalchemy>=2.0.48",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes==0.49.2",
]
cli = [
    "questionary>=2.0.1",
    "rich>=13.0.0",
    "ipywidgets>=8.0.0",
    "ipython>=8.0.0",
]
unsloth = [
    "unsloth",
    "bitsandbytes==0.49.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ModelForge*"]

[project.scripts]
modelforge = "ModelForge.cli:main"
modelforge-nb = "ModelForge.notebook_cli.wizard:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ModelForge" = [
    "**/*.jsonl",
    "**/*.yaml",
    "**/*.yml",
    "**/*.json",
    # Include the entire Frontend/build directory and all its contents
    "Frontend/build/**",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "database/*",
    "datasets/*",
    "model_checkpoints/*",
    "training_logs/*",
    "*__pycache__*",
    "*.pyc"
]

[project.urls]
Documentation = "https://modelforge-finetuning.readthedocs.io"
Repository = "https://github.com/forgeopus/modelforge"
Organization = "https://github.com/forgeopus"
